Reorder contents page

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -49,7 +49,7 @@ skip_preview: true
 :::
 :::
 
-::: {.column width="50%" .tl .nt5}
+::: {.column width="50%" .tl .nt5 .pl5}
 
 :::{.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
@@ -73,6 +73,19 @@ skip_preview: true
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
+[6]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
+:::
+
+::: {.nt6}
+![](6-risk-insights-and-regulatory-alignment.png){height=125px fig-alt="A screenshot of the risk insights and regulatory alignment"}<br>[[Risk Insights + Regulatory Alignment]{.b .black .f4}](#risk-insights-regulatory-alignment)
+:::
+:::
+:::
+
+::: {.column width="50%" .tr .pr6}
+
+::: {.button .button-light-green .shadow-5-ns}
+::: {.tl .nl4 .nt3}
 [3]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
 :::
 
@@ -83,7 +96,27 @@ skip_preview: true
 :::
 :::
 
-::: {.column width="50%" .tr}
+::::
+
+<br>
+
+:::: {.columns}
+
+::: {.column width="50%" .tr .pr6}
+
+::: {.button .button-light-green .shadow-5-ns}
+::: {.tl .nl4 .nt3}
+[5]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
+:::
+
+::: {.nt6}
+![](5-ongoing-monitoring.png){height=125px fig-alt="A screenshot of the ongoing monitoring"}<br>[[Ongoing Monitoring]{.b .black .f4}](#ongoing-monitoring)
+:::
+
+:::
+:::
+
+::: {.column width="50%" .tl .pl4}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt2}
@@ -99,42 +132,8 @@ skip_preview: true
 
 ::::
 
-<br>
 
-:::: {.columns}
-
-::: {.column width="50%" .tr .pr5}
-
-::: {.button .button-light-green .shadow-5-ns}
-::: {.tl .nl4 .nt3}
-[5]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
-:::
-
-::: {.nt6}
-![](5-ongoing-monitoring.png){height=125px fig-alt="A screenshot of the ongoing monitoring"}<br>[[Ongoing Monitoring]{.b .black .f4}](#ongoing-monitoring)
-:::
-
-:::
-:::
-
-::: {.column width="50%" .tl}
-
-::: {.button .button-light-green .shadow-5-ns}
-::: {.tl .nl4 .nt3}
-[6]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
-:::
-
-::: {.nt6}
-![](6-risk-insights-and-regulatory-alignment.png){height=125px fig-alt="A screenshot of the risk insights and regulatory alignment"}<br>[[Risk Insights + Regulatory Alignment]{.b .black .f4}](#risk-insights-regulatory-alignment)
-:::
-
-:::
-:::
-
-::::
-
-
-::: {.slideover--b .half .auto-collapse-1}
+<!-- ::: {.slideover--b .half .auto-collapse-1}
 
 ::: {.tc}
 
@@ -152,7 +151,7 @@ skip_preview: true
 
 :::
 
-:::
+::: -->
 
 # [1&ensp;The Inventory]{.hidden}{data-autoslide="12000"}
 
