Edits, s-shape experiment

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -49,7 +49,7 @@ skip_preview: true
 :::
 :::
 
-::: {.column width="50%" .tl .nt5 .pl5}
+::: {.column width="50%" .tl .nt4 .pl5}
 
 :::{.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
@@ -69,7 +69,7 @@ skip_preview: true
 
 :::: {.columns}
 
-::: {.column width="50%" .tl .pl5}
+::: {.column width="50%" .tl .pl4 .nt4}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
@@ -82,7 +82,7 @@ skip_preview: true
 :::
 :::
 
-::: {.column width="50%" .tr .pr6}
+::: {.column width="50%" .tr .pr5}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
@@ -102,7 +102,7 @@ skip_preview: true
 
 :::: {.columns}
 
-::: {.column width="50%" .tr .pr6}
+::: {.column width="50%" .tr .pr6 .nt2}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
@@ -116,7 +116,7 @@ skip_preview: true
 :::
 :::
 
-::: {.column width="50%" .tl .pl4}
+::: {.column width="50%" .tl .pl4 .pt2}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt2}
@@ -222,10 +222,9 @@ The inventory is [industry-aligned]{.b}, highly [customizable]{.b} with your own
 :::
 
 ::: {.column width="40%" .f3 .pl3}
-[Registration]{.b} starts the lifecycle for governance items. 
+[Registration starts the lifecycle]{.b} for governance, identifies the stakeholders, and collects any other required information. 
 
 <!-- You provide [basic information]{.b}, a [preliminary risk tier]{.b}, who the [stakeholders]{.b} are, and information whether the item is an [AI application]{.b}. -->
-Provide basic information, identify the stakeholders, and collect any other required information. 
 
 For example, you can require users to [identify AI applications]{.b} so that they can be governed appropriately.
 
@@ -506,8 +505,8 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 
 - For [AI systems]{.b}, [models]{.b}, [use cases]{.b}, [tools]{.b}, and more
 - Use predefined [templates]{.b} or create your own
-- Full-featured online editor
-- Reusable content block library
+- Full-featured [online editor]{.b}
+- Reusable [content block library]{.b}
 :::
 
 ::::
@@ -563,10 +562,10 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 
 [[{{< fa brands github >}} open source software]{.smallcaps .b .black}](https://github.com/validmind/validmind-library)
 
-- 200 out-of-box tests
-- End-to-end test suites
-- Model, prompt, and data assessments
-- Extensible with custom tests and test providers
+- 200 [out-of-box tests]{.b}
+- End-to-end [test suites]{.b}
+- Model, prompt, and data [assessments]{.b}
+- Extensible with [custom tests]{.b} and [test providers]{.b}
 :::
 
 ::: {.column width="60%" .nt5}
@@ -607,9 +606,9 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 ::: {.column width="30%" .pl4 .f3}
 [Validation]{.f2 .b}
 
-- Tailor the process to regulatory or internal standards
-- Assess compliance by linking evidence from developers and validators
-- Generate risk assessments with recommendations
+- [Tailor the process]{.b} to regulatory or internal standards
+- [Assess compliance]{.b} by linking evidence from developers and validators
+- [Generate risk assessments]{.b} with recommendations
 :::
 
 ::::
@@ -639,10 +638,10 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 
 [Robust processes]{.f2 .b}
 
-- Create challenger models
-- Open validation issues
-- Track remediation plans and monitor resolution
-- Collaborate with developers to resolve issues
+- Create [challenger models]{.b}
+- Open [validation issues]{.b}
+- Track [remediation plans]{.b} and monitor resolution
+- [Collaborate]{.b} with developers to resolve issues
 :::
 
 ::: {.column width="50%" .nt5}
@@ -708,13 +707,13 @@ Combine monitoring and workflows for [performance-based governance]{.b} with [th
 ::: {.column width="50%" .f3 .pt4 .pt5}
 [Ongoing Monitoring]{.f2 .b}
 
-- Enable for any model in the inventory
+{{< fa check >}}&ensp; [Enable]{.b} for any item in the inventory
 
-- Track model performance over time
+{{< fa check >}}&ensp; [Track]{.b} performance over time
 
-- Detect data drift and other issues early
+{{< fa check >}}&ensp; [Detect]{.b} data drift and other issues early
 
-- Define thresholds and receive alerts
+{{< fa check >}}&ensp; [Define]{.b} thresholds and receive alerts
 :::
 
 ::: {.column width="50%" .pl4 .tr .f3 .tilt-left}
@@ -737,9 +736,9 @@ Combine monitoring and workflows for [performance-based governance]{.b} with [th
 [Outcomes Analysis]{.f2 .b}
 
 ::: {.pl4 .mb4}
-- Detect test results that exceed thresholds
-- Follow escalation workflows when metrics exceed limits
-- Document and track remediation activities
+- Detect test results that [exceed thresholds]{.b}
+- Follow [escalation workflows]{.b} when metrics exceed limits
+- Document and [track remediation]{.b} activities
 :::
 
 [Data-Driven Governance]{.f2 .b}
@@ -747,9 +746,9 @@ Combine monitoring and workflows for [performance-based governance]{.b} with [th
 ::: {.pl4}
 Combine monitoring & workflows for:
 
-- Scheduled revalidation cycles
-- Event-triggered reassessments
-- Escalation to risk functions & committees
+- Scheduled [revalidation cycles]{.b}
+- Event-triggered [reassessments]{.b}
+- [Escalation]{.b} to risk functions & committees
 :::
 
 :::
@@ -818,10 +817,10 @@ ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quali
 ::: {.pt2 .pl4 .pb4 .f3}
 [Document Checker]{.f2 .b}
 
-- Assesses whether required information is clearly documented
-- Identifies missing or weak areas in the documentation
-- Guides you on how to improve clarity, completeness, and compliance
-- Aligns with regulatory expectations for risk and model governance 
+- [Assesses]{.b} whether required information is clearly documented
+- [Identifies]{.b} missing or weak areas in the documentation
+- [Guides]{.b} you on how to improve clarity, completeness, and compliance
+- [Aligns]{.b} with regulatory expectations for risk and model governance 
 
 ::: {.f4 .pl3 .pt2}
 [SR 11-7]{.button-small .shadow-5-ns} [SS1/23]{.button-small .shadow-5-ns} [E-23]{.button-small .shadow-5-ns} [EU AI ACT]{.button-small .shadow-5-ns}
@@ -842,33 +841,32 @@ ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quali
 :::
 
 
-# [How to put it all together]{.hidden}{data-autoslide="15000" background-image="circle-arrow.svg"}
+# [Putting governance into practice]{.hidden}{data-autoslide="15000" background-image="circle-arrow.svg"}
 
 :::: {.columns}
 
 ::: {.column width="50%" .pl3 .pr3}
 
 ::: {.pl4 .mb4}
-[How to put it all together]{.f2 .b}
+[Put governance into practice]{.f1 .b}
 
 ::: {.f3}
-ValidMind provides implementation guides for:
+Use our implementation guides for:
 :::
 
 ::: {.f4 .pl3 .pt2}
 [[AI governance<br>[EU AI Act]{.button-small .shadow-5-ns .f6 .tr}](/about/use-cases/ai-governance.qmd)]{.button .shadow-5-ns .f4}
 
 [[Model risk management<br>[SR 11-7]{.button-small .shadow-5-ns .f6 .tr} [SS1/23]{.button-small .shadow-5-ns .f6 .tr} [E-23]{.button-small .shadow-5-ns .f6 .tr}](/about/use-cases/model-risk-management.qmd)]{.button .shadow-5-ns .f4}
-
 :::
 :::
 
 :::
 
-::: {.column width="50%" .pl3 .pr3}
+::: {.column width="50%" .pl5 .pr2 .tilt-left}
 
-::: {.pl4 .mb4}
-[What these guides cover]{.f2 .b}
+::: {.pl4 .mb4 .bg-light-gray .ba .b--dark-green .pa3 .br3 .shadow-5-ns}
+[What these guides cover]{.f3 .b}
 
 ::: {.f4}
 - Inventory setup, custom fields, risk classification
@@ -887,7 +885,7 @@ ValidMind provides implementation guides for:
 
 
 
-# [Need more?]{.smallcaps .f1} {data-autoslide="60000"}
+# [Need more?]{.f1} {data-autoslide="60000"}
 
 
 [[Quickstarts](https://docs.validmind.com/get-started/get-started.html)]{.button .shadow-5-ns .f4}&emsp;[[Training](https://docs.validmind.com/training/training.qmd)]{.button .shadow-5-ns .f4}&emsp;[[User Guides](https://docs.validmind.com/guide/guides.html)]{.button .shadow-5-ns .f4}&emsp;[[Code Samples](https://docs.validmind.com/developer/samples-jupyter-notebooks.html)]{.button .shadow-5-ns .f4}
