Edits, make more image backgrounds transparent

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -865,7 +865,7 @@ Use our implementation guides for:
 
 ::: {.column width="50%" .pl5 .pr2 .tilt-left}
 
-::: {.pl4 .mb4 .bg-light-gray .ba .b--dark-green .pa3 .br3 .shadow-5-ns}
+::: {.pl4 .mb4 .bg-white .ba .b--dark-green .pa3 .br3 .shadow-5-ns}
 [What these guides cover]{.f3 .b}
 
 ::: {.f4}
@@ -885,7 +885,61 @@ Use our implementation guides for:
 
 
 
-# [Need more?]{.f1} {data-autoslide="60000"}
+# [Need more?]{.hidden} {data-autoslide="60000"}
 
+::: {.nt2 .f .b}
+Need more?
+:::
 
-[[Quickstarts](https://docs.validmind.com/get-started/get-started.html)]{.button .shadow-5-ns .f4}&emsp;[[Training](https://docs.validmind.com/training/training.qmd)]{.button .shadow-5-ns .f4}&emsp;[[User Guides](https://docs.validmind.com/guide/guides.html)]{.button .shadow-5-ns .f4}&emsp;[[Code Samples](https://docs.validmind.com/developer/samples-jupyter-notebooks.html)]{.button .shadow-5-ns .f4}
+:::: {.columns}
+
+::: {.column width="25%" .pt4}
+
+::: {.button .button-light-green .shadow-5-ns}
+::: {.nt5}
+![](quickstart.png){height=125px fig-alt="Quickstarts"}
+:::
+
+[[Quickstarts]{.b .black .f4}](https://docs.validmind.com/get-started/get-started.html)
+
+:::
+:::
+
+::: {.column width="25%" .pt4}
+
+::: {.button .button-light-green .shadow-5-ns}
+::: {.nt5}
+![](training.png){height=125px fig-alt="Training"}
+:::
+
+[[Training]{.b .black .f4}](https://docs.validmind.com/training/training.qmd)
+
+:::
+:::
+
+::: {.column width="25%" .pt4}
+
+::: {.button .button-light-green .shadow-5-ns}
+::: {.nt5}
+![](guides.png){height=125px fig-alt="User Guides"}
+:::
+
+[[User Guides]{.b .black .f4}](https://docs.validmind.com/guide/guides.html)
+
+:::
+:::
+
+::: {.column width="25%" .pt4}
+
+::: {.button .button-light-green .shadow-5-ns}
+::: {.nt5}
+![](code-samples.png){height=125px fig-alt="Code Samples"}
+:::
+
+[[Code Samples]{.b .black .f4}](https://docs.validmind.com/developer/samples-jupyter-notebooks.html)
+
+:::
+:::
+
+::::
+
