--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -855,7 +855,7 @@ Use our implementation guides for:
 :::
 
 ::: {.f4 .pl3 .pt2}
-[[AI governance<br>[EU AI Act]{.button-small .shadow-5-ns .f6 .tr}](/about/use-cases/ai-governance.qmd)]{.button .shadow-5-ns .f4}
+[[AI governance<br>[EU AI ACT]{.button-small .shadow-5-ns .f6 .tr}](/about/use-cases/ai-governance.qmd)]{.button .shadow-5-ns .f4}
 
 [[Model risk management<br>[SR 11-7]{.button-small .shadow-5-ns .f6 .tr} [SS1/23]{.button-small .shadow-5-ns .f6 .tr} [E-23]{.button-small .shadow-5-ns .f6 .tr}](/about/use-cases/model-risk-management.qmd)]{.button .shadow-5-ns .f4}
 :::
