Explicitly state format for non-revealjs files to avoid double outputs

--- a/site/training/ai-governance/ai-governance-register.qmd
+++ b/site/training/ai-governance/ai-governance-register.qmd
@@ -5,6 +5,7 @@
 title: "AI Governance"
 subtitle: For {{< var vm.product >}}
 date: last-modified
+format: html
 listing:
   - id: ai-governance-modules
     type: grid
