--- a/site/training/developer-fundamentals/developer-fundamentals-register.qmd
+++ b/site/training/developer-fundamentals/developer-fundamentals-register.qmd
@@ -8,6 +8,7 @@ date: last-modified
 aliases: 
   - training-for-model-developers.html
   - developer-fundamentals.html
+format: html
 listing:
   - id: developer-modules
     type: grid
