--- a/site/training/program/training-faq.qmd
+++ b/site/training/program/training-faq.qmd
@@ -4,6 +4,7 @@
 # SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial
 title: "Where do I find &hellip; ?"
 sidebar: validmind-training
+format: html
 ---
 
 Here's what we have been asked about {{< var vm.product >}} during training sessions.
