--- a/site/training/training-templates/course-registration.qmd
+++ b/site/training/training-templates/course-registration.qmd
@@ -7,6 +7,7 @@ subtitle: For {{< var vm.product >}}
 date: last-modified
 # REMOVE THE SEARCH FALSE TOGGLE WHEN THE COURSE IS READY TO BE PUBLISHED
 search: false
+format: html
 listing:
   - id: modules
     type: grid
