--- a/site/training/training.qmd
+++ b/site/training/training.qmd
@@ -11,6 +11,7 @@ aliases:
   - index.html
   - training-overview.html
   - /guide/get-started-sandbox.html
+format: html
 listing:
   - id: training-curriculum
     type: grid
