--- a/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
+++ b/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
@@ -8,6 +8,7 @@ date: last-modified
 aliases: 
   - training-for-administrators.html
   - administrator-fundamentals.html
+format: html
 listing:
   - id: administrator-modules
     type: grid
