--- a/site/training/program/program-overview.qmd
+++ b/site/training/program/program-overview.qmd
@@ -4,6 +4,7 @@
 # SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial
 title: "Learn with confidence"
 sidebar: validmind-training
+format: html
 listing:
   - id: learning-paths
     type: grid
