--- a/site/training/program/sample-training-plan.qmd
+++ b/site/training/program/sample-training-plan.qmd
@@ -5,6 +5,7 @@
 title: "Sample training plan"
 sidebar: validmind-training
 description: "Sample 3-week training plan for enterprise deployment with enhanced support options."
+format: html
 ---
 
 This enterprise training plan demonstrates how {{< var vm.product >}} can be deployed across a large organization using both standard and enhanced training options. The plan includes comprehensive role-based training, custom workshops, and ongoing support to ensure successful adoption.
