--- a/site/training/validator-fundamentals/validator-fundamentals-register.qmd
+++ b/site/training/validator-fundamentals/validator-fundamentals-register.qmd
@@ -8,6 +8,7 @@ date: last-modified
 aliases:
   - training-for-model-validators.html
   - validator-fundamentals.html
+format: html
 listing:
   - id: validator-modules
     type: grid
