Move include-in-header directive into revealjs files

--- a/site/training/ai-governance/understanding-ai-governance.qmd
+++ b/site/training/ai-governance/understanding-ai-governance.qmd
@@ -7,6 +7,9 @@ subtitle: "AI Governance — Module 1 of 4<br><br>_Click [{{< fa chevron-right >
 lightbox: true
 format:
   revealjs:
+    include-in-header:
+      - text: |
+          <script src="/training/assets/vmurl-settings.js"></script>
     controls: true
     controls-tutorial: true
     help: true
