--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -7,6 +7,9 @@ subtitle: "Developer Fundamentals — Module 4 of 4<br><br>_Click [{{< fa chevro
 lightbox: true
 format:
   revealjs:
+    include-in-header:
+      - text: |
+          <script src="/training/assets/vmurl-settings.js"></script>
     controls: true
     controls-tutorial: true
     help: true
