--- a/site/training/risk-governance-fundamentals.qmd/risk-governance-fundamentals.qmd
+++ b/site/training/risk-governance-fundamentals.qmd/risk-governance-fundamentals.qmd
@@ -8,6 +8,9 @@ lightbox: true
 search: false
 format:
   revealjs:
+    include-in-header:
+      - text: |
+          <script src="/training/assets/vmurl-settings.js"></script>
     controls: true
     controls-tutorial: true
     controls-back-arrows: visible
