--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -7,6 +7,9 @@ subtitle: "Developer Fundamentals — Module 1 of 4<br><br>_Click [{{< fa chevr
 lightbox: true
 format:
   revealjs:
+    include-in-header:
+      - text: |
+          <script src="/training/assets/vmurl-settings.js"></script>
     controls: true
     controls-tutorial: true
     help: true
