Updated notebooks from branch

--- a/site/notebooks/code_samples/credit_risk/application_scorecard_executive.ipynb
+++ b/site/notebooks/code_samples/credit_risk/application_scorecard_executive.ipynb
@@ -343,14 +343,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-c6f1e357abb641589e3e838c42700469",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
