--- a/site/notebooks/EXECUTED/model_development/2-start_development_process.ipynb
+++ b/site/notebooks/EXECUTED/model_development/2-start_development_process.ipynb
@@ -989,14 +989,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-e5e5871f076545839c2d502658ac7e33",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
