--- a/site/notebooks/EXECUTED/model_validation/4-finalize_validation_reporting.ipynb
+++ b/site/notebooks/EXECUTED/model_validation/4-finalize_validation_reporting.ipynb
@@ -1200,14 +1200,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-20b8614cb05a45f4bb5adb7ceb939482",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
