--- a/site/notebooks/code_samples/agents/langgraph_agent_simple_banking_demo.ipynb
+++ b/site/notebooks/code_samples/agents/langgraph_agent_simple_banking_demo.ipynb
@@ -1462,14 +1462,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-4a8b954ce80b451ea981617ae01863bb",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
