--- a/site/notebooks/code_samples/capital_markets/quickstart_option_pricing_models.ipynb
+++ b/site/notebooks/code_samples/capital_markets/quickstart_option_pricing_models.ipynb
@@ -2061,15 +2061,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adb15089",
+   "id": "copyright-08fc00557dce4ceb9b88415e92b96f9d",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
