--- a/site/notebooks/code_samples/credit_risk/application_scorecard_with_bias.ipynb
+++ b/site/notebooks/code_samples/credit_risk/application_scorecard_with_bias.ipynb
@@ -1508,14 +1508,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-325f517ff94f433da6edeb715e0b18b7",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
