--- a/site/notebooks/code_samples/nlp_and_llm/foundation_models_integration_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/foundation_models_integration_demo.ipynb
@@ -459,14 +459,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-618bc2e28e5b4c1a86fe7ec816670ecf",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
