--- a/site/notebooks/code_samples/nlp_and_llm/hugging_face_summarization_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/hugging_face_summarization_demo.ipynb
@@ -464,14 +464,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-21fc7c08e9eb4c49b870329276d6ee59",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
