--- a/site/notebooks/code_samples/regression/quickstart_regression_full_suite.ipynb
+++ b/site/notebooks/code_samples/regression/quickstart_regression_full_suite.ipynb
@@ -548,14 +548,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-247efd904e2c4c73ac8b4c2a3c3d72c3",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
