--- a/site/notebooks/how_to/customize_test_result_descriptions.ipynb
+++ b/site/notebooks/how_to/customize_test_result_descriptions.ipynb
@@ -1002,14 +1002,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-1d37be74d95e4962834aef4bca1dcf5b",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
