--- a/site/notebooks/how_to/enable_pii_detection.ipynb
+++ b/site/notebooks/how_to/enable_pii_detection.ipynb
@@ -600,15 +600,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1e696a9",
+   "id": "copyright-b5e6bd73e17d4dad8f08bd2d610ea3ae",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
