--- a/site/notebooks/how_to/load_datasets_predictions.ipynb
+++ b/site/notebooks/how_to/load_datasets_predictions.ipynb
@@ -1017,14 +1017,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-f0f5f5c8197b4ef4b4f50dd7b19d4d0d",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
