--- a/site/notebooks/how_to/understand_utilize_rawdata.ipynb
+++ b/site/notebooks/how_to/understand_utilize_rawdata.ipynb
@@ -702,15 +702,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16d292fe",
+   "id": "copyright-b30ff7e5445141fda373c9d60f3387ee",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
