Add custom URL configuration button (#1116)
* Add initial custom URL configuration button

* Remove temporary file

* Move new CSS into slides.scss

* Explicitly state format for non-revealjs files to avoid double outputs

* Move include-in-header directive into revealjs files

* Remove Latinism, make sampe URL more generic

* Fix placeholder

* Update site/training/assets/vmurl-settings.js

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

* Update site/training/assets/vmurl-settings.js

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

---------

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -4,6 +4,9 @@ subtitle: "Administrator Fundamentals — Module 2 of 4<br><br>_Click [{{< fa ch
 lightbox: true
 format:
   revealjs:
+    include-in-header:
+      - text: |
+          <script src="/training/assets/vmurl-settings.js"></script>
     controls: true
     controls-tutorial: true
     help: true
