--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -4,6 +4,9 @@ subtitle: "Administrator Fundamentals — Module 1 of 4<br><br>_Click [{{< fa c
 lightbox: true
 format:
   revealjs:
+    include-in-header:
+      - text: |
+          <script src="/training/assets/vmurl-settings.js"></script>
     controls: true
     controls-tutorial: true
     help: true
