--- a/site/training/ai-governance/compliance-and-oversight.qmd
+++ b/site/training/ai-governance/compliance-and-oversight.qmd
@@ -4,6 +4,9 @@ subtitle: "AI Governance — Module 4 of 4<br><br>_Click [{{< fa chevron-right >
 lightbox: true
 format:
   revealjs:
+    include-in-header:
+      - text: |
+          <script src="/training/assets/vmurl-settings.js"></script>
     controls: true
     controls-tutorial: true
     help: true
