--- a/site/training/product-tour/product-tour.qmd
+++ b/site/training/product-tour/product-tour.qmd
@@ -6,6 +6,9 @@ lightbox: true
 search: false
 format:
   revealjs:
+    include-in-header:
+      - text: |
+          <script src="/training/assets/vmurl-settings.js"></script>
     controls: true
     controls-tutorial: true
     help: true
