Remove auto-slide, add target=_blank for links, rework footer

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -12,14 +12,13 @@ format:
     help: true
     controls-back-arrows: visible
     transition: zoom
-    auto-slide: 5000
     theme: [../assets/slides.scss, ../assets/use-cases.scss]
     slide-number: true
     chalkboard: false
     preview-links: auto
     view-distance: 2
     logo: /favicon.svg
-    footer: "[{{< fa person-walking-arrow-loop-left >}} Contents](#contents) | {{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
+    footer: "<h4>[[back to contents]{.smallcaps .b}](#contents)</h4><small>{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)</small>"
     revealjs-plugins:
       - slideover
   html:
@@ -31,7 +30,7 @@ title-slide-attributes:
 skip_preview: true
 ---
 
-# [Contents]{.hidden}{data-autoslide="60000" background-image="circle.svg"}
+# [Contents]{.hidden}{background-image="circle.svg"}
 
 :::: {.columns}
 
@@ -153,7 +152,7 @@ skip_preview: true
 
 ::: -->
 
-# [1&ensp;The Inventory]{.hidden}{data-autoslide="12000"}
+# [1&ensp;The Inventory]{.hidden}
 
 :::: {.columns}
 
@@ -180,7 +179,7 @@ ValidMind is your [system of record]{.b} for governance. Use the inventory to [t
 ::::
 
 
-# [Inventory]{.hidden}{data-autoslide="27500"}
+# [Inventory]{.hidden}
 
 :::: {.columns}
 
@@ -201,11 +200,11 @@ The inventory is [industry-aligned]{.b}, highly [customizable]{.b} with your own
 :::: columns
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I use the inventory?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-inventory/working-with-model-inventory.html) 
+[[{{< fa circle-info >}}&ensp;How do I use the inventory?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-inventory/working-with-model-inventory.html){target="_blank"}
 :::
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa rocket >}}&ensp;Open the inventory]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory)
+[[{{< fa rocket >}}&ensp;Open the inventory]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory){target="_blank"}
 :::
 
 ::::
@@ -213,7 +212,7 @@ The inventory is [industry-aligned]{.b}, highly [customizable]{.b} with your own
 :::
 
 
-# [Registration]{.hidden}{data-autoslide="19500"}
+# [Registration]{.hidden}
 
 :::: {.columns}
 
@@ -247,11 +246,11 @@ For example, you can require users to [identify AI applications]{.b} so that the
 :::: columns
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I register items?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html) 
+[[{{< fa circle-info >}}&ensp;How do I register items?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html){target="_blank"} 
 :::
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa rocket >}}&ensp;Register a new item]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory/?register=open)
+[[{{< fa rocket >}}&ensp;Register a new item]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory/?register=open){target="_blank"}
 :::
 
 ::::
@@ -259,7 +258,7 @@ For example, you can require users to [identify AI applications]{.b} so that the
 :::
 
 
-# [2&ensp;Workflows + Approvals]{.hidden}{data-autoslide="18000"}
+# [2&ensp;Workflows + Approvals]{.hidden}
 
 :::: {.columns}
 
@@ -287,7 +286,7 @@ ValidMind workflows enable governance by defining [roles and responsibilities]{.
 ::::
 
 
-# [Roles and responsibilities]{.hidden}{data-autoslide="22000"}
+# [Roles and responsibilities]{.hidden}
 
 :::: {.columns}
 
@@ -348,7 +347,7 @@ Track all activities for:
 :::
 
 
-# [What do I use workflows for?]{.hidden}{data-autoslide="18000"}
+# [What do I use workflows for?]{.hidden}
 
 :::: {.columns}
 
@@ -380,11 +379,11 @@ Track all activities for:
 :::: columns
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I use workflows?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/workflows/working-with-workflows.html) 
+[[{{< fa circle-info >}}&ensp;How do I use workflows?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/workflows/working-with-workflows.html){target="_blank"} 
 :::
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa rocket >}}&ensp;Open workflows]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/settings/workflows)
+[[{{< fa rocket >}}&ensp;Open workflows]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/settings/workflows){target="_blank"}
 :::
 
 ::::
@@ -392,7 +391,7 @@ Track all activities for:
 :::
 
 
-# [3&ensp;Reporting + Analytics]{.hidden}{data-autoslide="12000"}
+# [3&ensp;Reporting + Analytics]{.hidden}
 
 :::: {.columns}
 
@@ -420,7 +419,7 @@ ValidMind provides [customizable dashboards]{.b} and [analytics]{.b} for oversig
 ::::
 
 
-# [Reporting and Analytics]{.hidden}{data-autoslide="14000"}
+# [Reporting and Analytics]{.hidden}
 
 :::: {.columns}
 
@@ -448,11 +447,11 @@ ValidMind provides [customizable dashboards]{.b} and [analytics]{.b} for oversig
 :::: columns
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I use analytics?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/reporting/working-with-analytics.html) 
+[[{{< fa circle-info >}}&ensp;How do I use analytics?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/reporting/working-with-analytics.html){target="_blank"} 
 :::
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I export?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/reporting/generating-exports.html)
+[[{{< fa circle-info >}}&ensp;How do I export?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/reporting/generating-exports.html){target="_blank"}
 :::
 
 ::::
@@ -460,7 +459,7 @@ ValidMind provides [customizable dashboards]{.b} and [analytics]{.b} for oversig
 :::
 
 
-# [4&ensp;Documentation + Testing + Validation]{.hidden}{data-autoslide="18000"}
+# [4&ensp;Documentation + Testing + Validation]{.hidden}
 
 :::: {.columns}
 
@@ -487,7 +486,7 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 
 ::::
 
-# [Documentation]{.hidden}{data-autoslide="21000"}
+# [Documentation]{.hidden}
 
 :::: {.columns}
 
@@ -553,14 +552,14 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 :::
 
 
-# [Testing]{.hidden}{data-autoslide="32000"}
+# [Testing]{.hidden}
 
 :::: {.columns}
 
 ::: {.column width="40%" .nt5 .f3 .pr4}
 [Testing]{.f2 .b}
 
-[[{{< fa brands github >}} open source software]{.smallcaps .b .black}](https://github.com/validmind/validmind-library)
+[[{{< fa brands github >}} open source software]{.smallcaps .b .black}](https://github.com/validmind/validmind-library){target="_blank"}
 
 - 200 [out-of-box tests]{.b}
 - End-to-end [test suites]{.b}
@@ -579,15 +578,15 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 :::: columns
 
 ::: {.column width="30%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;Developer Quickstart]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/get-started/developer/quickstart-developer.html)
+[[{{< fa circle-info >}}&ensp;Developer Quickstart]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/get-started/developer/quickstart-developer.html){target="_blank"}
 :::
 
 ::: {.column width="40%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;Developer Fundamentals Training]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/training/developer-fundamentals/developer-fundamentals-register.html) 
+[[{{< fa circle-info >}}&ensp;Developer Fundamentals Training]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/training/developer-fundamentals/developer-fundamentals-register.html){target="_blank"} 
 :::
 
 ::: {.column width="30%" .tc .nt4}
-[[{{< fa code >}}&ensp;Code samples]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/developer/samples-jupyter-notebooks.html)<br>
+[[{{< fa code >}}&ensp;Code samples]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/developer/samples-jupyter-notebooks.html){target="_blank"}<br>
 :::
 
 ::::
@@ -595,7 +594,7 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 :::
 
 
-# [Validation]{.hidden}{data-autoslide="24000"}
+# [Validation]{.hidden}
 
 :::: {.columns}
 
@@ -618,11 +617,11 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 :::: columns
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I prepare validation reports?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-validation/preparing-validation-reports.html) 
+[[{{< fa circle-info >}}&ensp;How do I prepare validation reports?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-validation/preparing-validation-reports.html){target="_blank"} 
 :::
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa rocket >}}&ensp;Open validation reports]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory)
+[[{{< fa rocket >}}&ensp;Open validation reports]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory){target="_blank"}
 :::
 
 ::::
@@ -630,7 +629,7 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 :::
 
 
-# [Robust processes]{.hidden}{data-autoslide="12000"}
+# [Robust processes]{.hidden}
 
 :::: {.columns}
 
@@ -663,7 +662,7 @@ Validators can use the same library as developers:
 :::
 
 ::: {.column width="50%" .tc .pl4 .nt4}
-[[{{< fa circle-info >}}&ensp;Validator Fundamentals Training]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/training/validator-fundamentals/validator-fundamentals-register.html)
+[[{{< fa circle-info >}}&ensp;Validator Fundamentals Training]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/training/validator-fundamentals/validator-fundamentals-register.html){target="_blank"}
 <!-- <br>[TIP: CHALLENGER MODELS ARE COVERED IN MODULE 3]{.smallcaps .f5} -->
 :::
 
@@ -672,7 +671,7 @@ Validators can use the same library as developers:
 :::
 
 
-# [5&ensp;Ongoing Monitoring]{.hidden}{data-autoslide="6000"}
+# [5&ensp;Ongoing Monitoring]{.hidden}
 
 :::: {.columns}
 
@@ -700,7 +699,7 @@ Combine monitoring and workflows for [performance-based governance]{.b} with [th
 
 ::::
 
-# [Ongoing monitoring]{.hidden}{data-autoslide="28500"}
+# [Ongoing monitoring]{.hidden}
 
 :::: {.columns}
 
@@ -724,7 +723,7 @@ Combine monitoring and workflows for [performance-based governance]{.b} with [th
 
 :::: 
 
-# [Governance]{.hidden}{data-autoslide="21000"}
+# [Governance]{.hidden}
 
 :::: {.columns}
 
@@ -760,11 +759,11 @@ Combine monitoring & workflows for:
 :::: columns
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I enable monitoring?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/monitoring/enable-monitoring.html) 
+[[{{< fa circle-info >}}&ensp;How do I enable monitoring?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/monitoring/enable-monitoring.html){target="_blank"} 
 :::
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa bell >}}&ensp;Set thresholds and alerts]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/monitoring/set-thresholds-and-alerts.html)
+[[{{< fa bell >}}&ensp;Set thresholds and alerts]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/monitoring/set-thresholds-and-alerts.html){target="_blank"}
 :::
 
 ::::
@@ -772,7 +771,7 @@ Combine monitoring & workflows for:
 :::
 
 
-# [6&ensp;Risk Insights + Regulatory Alignment]{.hidden}{data-autoslide="12000"}
+# [6&ensp;Risk Insights + Regulatory Alignment]{.hidden}
 
 :::: {.columns}
 
@@ -800,7 +799,7 @@ ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quali
 ::::
 
 
-# [Document checker]{.hidden}{data-autoslide="12000"}
+# [Document checker]{.hidden}
 
 :::: {.columns}
 
@@ -835,13 +834,13 @@ ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quali
 ::: {.slideover--b .auto-collapse .three-quarters}
 
 ::: {.tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I use the document checker?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-documentation/check-documentation-for-compliance.html)
+[[{{< fa circle-info >}}&ensp;How do I use the document checker?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-documentation/check-documentation-for-compliance.html){target="_blank"}
 :::
 
 :::
 
 
-# [Putting governance into practice]{.hidden}{data-autoslide="15000" background-image="circle-arrow.svg"}
+# [Putting governance into practice]{.hidden}{background-image="circle-arrow.svg"}
 
 :::: {.columns}
 
@@ -855,9 +854,9 @@ Use our implementation guides for:
 :::
 
 ::: {.f4 .pl3 .pt2}
-[[AI governance<br>[EU AI ACT]{.button-small .shadow-5-ns .f6 .tr}](/about/use-cases/ai-governance.qmd)]{.button .shadow-5-ns .f4}
+[[AI governance<br>[EU AI ACT]{.button-small .shadow-5-ns .f6 .tr}](/about/use-cases/ai-governance.qmd){target="_blank"}]{.button .shadow-5-ns .f4}
 
-[[Model risk management<br>[SR 11-7]{.button-small .shadow-5-ns .f6 .tr} [SS1/23]{.button-small .shadow-5-ns .f6 .tr} [E-23]{.button-small .shadow-5-ns .f6 .tr}](/about/use-cases/model-risk-management.qmd)]{.button .shadow-5-ns .f4}
+[[Model risk management<br>[SR 11-7]{.button-small .shadow-5-ns .f6 .tr} [SS1/23]{.button-small .shadow-5-ns .f6 .tr} [E-23]{.button-small .shadow-5-ns .f6 .tr}](/about/use-cases/model-risk-management.qmd){target="_blank"}]{.button .shadow-5-ns .f4}
 :::
 :::
 
@@ -885,7 +884,7 @@ Use our implementation guides for:
 
 
 
-# [Need more?]{.hidden} {data-autoslide="60000"}
+# [Need more?]{.hidden}
 
 ::: {.nt2 .f .b}
 Need more?
@@ -900,7 +899,7 @@ Need more?
 ![](quickstart.png){height=125px fig-alt="Quickstarts"}
 :::
 
-[[Quickstarts]{.b .black .f4}](https://docs.validmind.com/get-started/get-started.html)
+[[Quickstarts]{.b .black .f4}](https://docs.validmind.com/get-started/get-started.html){target="_blank"}
 
 :::
 :::
@@ -912,7 +911,7 @@ Need more?
 ![](training.png){height=125px fig-alt="Training"}
 :::
 
-[[Training]{.b .black .f4}](https://docs.validmind.com/training/training.qmd)
+[[Training]{.b .black .f4}](https://docs.validmind.com/training/training.qmd){target="_blank"}
 
 :::
 :::
@@ -924,7 +923,7 @@ Need more?
 ![](guides.png){height=125px fig-alt="User Guides"}
 :::
 
-[[User Guides]{.b .black .f4}](https://docs.validmind.com/guide/guides.html)
+[[User Guides]{.b .black .f4}](https://docs.validmind.com/guide/guides.html){target="_blank"}
 
 :::
 :::
@@ -936,7 +935,7 @@ Need more?
 ![](code-samples.png){height=125px fig-alt="Code Samples"}
 :::
 
-[[Code Samples]{.b .black .f4}](https://docs.validmind.com/developer/samples-jupyter-notebooks.html)
+[[Code Samples]{.b .black .f4}](https://docs.validmind.com/developer/samples-jupyter-notebooks.html){target="_blank"}
 
 :::
 :::
